--- a/Pipfile
+++ b/Pipfile
@@ -4,19 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pybullet = "*"
-tf-agents = "*"
-black = "*"
-pandas = "*"
-gym = {ref = "v0.21.0", git = "https://github.com/openai/gym"}
-keras-rl = {git = "https://github.com/matthiasplappert/keras-rl.git"}
-pillow = "*"
-opencv-python = "*"
-scikit-learn = "*"
-wandb = "*"
-keras-rl2 = "*"
-matplotlib = "*"
 tensorflow = "*"
+keras-rl = "*"
+matplotlib = "*"
+pybullet = "*"
 
 [dev-packages]
 
